syntax = "proto3";

package author;
option go_package = "author-service/common/proto;author";

service AuthorService {
  // Mendapatkan semua penulis
  rpc GetAllAuthors (Empty) returns (AuthorListResponse);

  // Membuat penulis baru
  rpc CreateAuthor (AuthorRequest) returns (AuthorResponse);

  // Memperbarui penulis berdasarkan ID
  rpc UpdateAuthor (UpdateAuthorRequest) returns (AuthorResponse);

  // Menghapus penulis berdasarkan ID
  rpc DeleteAuthor (DeleteAuthorRequest) returns (Empty);
}

// Permintaan untuk membuat penulis baru
message AuthorRequest {
  string name = 1;
  string bio = 2;
}

// Permintaan untuk memperbarui penulis
message UpdateAuthorRequest {
  int64 id = 1;
  string name = 2;
  string bio = 3;
}

// Permintaan untuk menghapus penulis
message DeleteAuthorRequest {
  int64 id = 1;
}

// Respons untuk Author
message AuthorResponse {
  int64 id = 1;
  string name = 2;
  string bio = 3;
}

// Respons untuk daftar Author
message AuthorListResponse {
  repeated AuthorResponse authors = 1;
}

// Pesan kosong untuk permintaan tanpa parameter
message Empty {}
